fixes text alignment

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -7,8 +7,7 @@
     font-weight: normal;
     letter-spacing: .1em;
     color: #00c5b2;
-    margin: auto;
-    text-align: center;
+    margin: auto;;
   }
 
   section h2 {
